<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.coen268.invitenow.nishant.invitenowv10.ProfileActivity">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/editProfileIcon"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/edit"
        android:contentDescription="@string/editIcon"
        android:onClick="enterEditProfile"/>


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/profilePhotoBig"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/profilephoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usersNameTextViewString"
        android:id="@+id/textView"
        android:layout_below="@+id/profilePhotoBig"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:layout_marginTop="20dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availableRadioButtonText"
            android:id="@+id/AvailableRadioButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busyRadioButtonText"
            android:id="@+id/BusyRadioButton" />

    </RadioGroup>
</RelativeLayout>
