<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.coen268.invitenow.nishant.invitenowv10.EditProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doneText"
        android:id="@+id/doneText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:onClick="enterSendInvites"/>


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/profilePhotoBigEdit"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/profilephoto"
        android:src="@drawable/uploadpic"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/usersNameTextViewString"
        android:id="@+id/editView"
        android:layout_below="@+id/profilePhotoBigEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
